bug(#716): hone to none phase

--- a/pom.xml
+++ b/pom.xml
@@ -398,7 +398,7 @@
             <version>0.9.1</version>
             <executions>
               <execution>
-                <phase>process-sources</phase>
+                <phase>none</phase>
                 <goals>
                   <goal>pull</goal>
                   <goal>optimize</goal>
