--- a/pom.xml
+++ b/pom.xml
@@ -382,7 +382,10 @@
     <profile>
       <id>hone</id>
       <activation>
-        <activeByDefault>false</activeByDefault>
+        <property>
+          <name>run.hone</name>
+          <value>true</value>
+        </property>
         <!--
           @todo #711:45min Enable `hone` profile on all platforms after.
            For now, `hone-maven-plugin` fails on `macOS` and `Windows` machines.
