--- a/pom.xml
+++ b/pom.xml
@@ -382,10 +382,7 @@
     <profile>
       <id>hone</id>
       <activation>
-        <property>
-          <name>run.hone</name>
-          <value>true</value>
-        </property>
+        <activeByDefault>false</activeByDefault>
         <!--
           @todo #711:45min Enable `hone` profile on all platforms after.
            For now, `hone-maven-plugin` fails on `macOS` and `Windows` machines.
@@ -401,7 +398,6 @@
             <version>0.9.1</version>
             <executions>
               <execution>
-                <phase>none</phase>
                 <goals>
                   <goal>pull</goal>
                   <goal>optimize</goal>
