#725: Add support for disabling headings and contractions for Google and Microsoft.

--- a/.vale.ini
+++ b/.vale.ini
@@ -21,6 +21,10 @@ Google.We = No
 Google.Will = No
 Microsoft.Vocab = No
 Google.Parens = No
+Google.Headings = No
+Microsoft.Headings = No
+Microsoft.Contractions = No
+Google.Contractions = No
 
 [src/main/resources/org/eolang/motives/critical/same-line-names.md]
 Google.Units = No
