--- a/.github/workflows/reserved.yml
+++ b/.github/workflows/reserved.yml
@@ -10,6 +10,9 @@ name: reserved
   pull_request:
     branches:
       - master
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref || github.run_id }}
+  cancel-in-progress: true
 jobs:
   reserved:
     timeout-minutes: 20
