--- a/src/test/resources/org/eolang/lints/packs/single/idempotent-attribute-is-not-first/catches-idempotent-not-first.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/idempotent-attribute-is-not-first/catches-idempotent-not-first.yaml
@@ -2,9 +2,9 @@
 # SPDX-License-Identifier: MIT
 ---
 sheets:
-  - /org/eolang/lints/critical/idempotent-attribute-is-not-first.xsl
+  - /org/eolang/lints/design/idempotent-attribute-is-not-first.xsl
 asserts:
-  - /defects[count(defect[@severity='critical'])=1]
+  - /defects[count(defect[@severity='warning'])=1]
 document: |
   <object author="tests">
     <o name="foo">
