--- a/src/test/resources/org/eolang/lints/packs/single/duplicate-names-in-diff-context/catches-duplicated-names-in-deep-hierarchy.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/duplicate-names-in-diff-context/catches-duplicated-names-in-deep-hierarchy.yaml
@@ -6,16 +6,17 @@ sheets:
   - /org/eolang/lints/misc/duplicate-names-in-diff-context.xsl
 asserts:
   - /defects[count(defect[@severity='warning'])=1]
-  - /defects/defect[@line='4']
-  - /defects/defect[normalize-space()='Object "hello" has the same name as the objects on the lines 6, 8, 10']
+  - /defects/defect[@line='5']
+  - /defects/defect[normalize-space()='Object "s" has the same name as the objects on the lines 11']
 input: |
   # No comments.
-  [] > main
-    [] > f1
-      "Hello world" > hello
-    [] > f2
-      "Привет мир" > hello
-    [] > f3
-      "你好，世界" > hello
-    [] > f4
-      "こんにちは、世界" > hello
+  [] > head
+    [] > first
+      [] > second
+        "plus" > s
+        [] > third
+          [] > fourth
+            [] > nested
+              [] > more-nested
+                [] > tail
+                  "boom" > s
