--- a/src/test/resources/org/eolang/lints/packs/wpa/incorrect-number-of-attributes/catches-incorrect-number-of-attributes.yaml
+++ b/src/test/resources/org/eolang/lints/packs/wpa/incorrect-number-of-attributes/catches-incorrect-number-of-attributes.yaml
@@ -7,7 +7,7 @@ lints:
 asserts:
   - /defects[count(defect[@severity='error'])=1]
   - /defects/defect[@object='app' and @line='3']
-  - /defects/defect[1][normalize-space()='The object "Φ.org.eolang.foo" expects 1 arguments, while 2 provided']
+  - /defects/defect[1][normalize-space()='The object "Φ.org.eolang.foo" usually expects 1 arguments, while 2 provided here']
 foo.eo: |
   # Foo with one attribute.
   [a] > foo
