--- a/.github/workflows/hone.yml
+++ b/.github/workflows/hone.yml
@@ -10,6 +10,8 @@ name: hone
   pull_request:
     branches:
       - master
+env:
+  RUN_WORKFLOW: false
 jobs:
   hone:
     timeout-minutes: 45
@@ -19,7 +21,7 @@ jobs:
     #  this issue: https://github.com/objectionary/hone-maven-plugin/issues/297. Also, the plugin run
     #  is time-consuming, we should enable it only after the plugin will have stable execution time,
     #  in order to not disturb the development in this repository.
-    if: false
+    if: env.RUN_WORKFLOW == 'true'
     steps:
       - uses: actions/checkout@v5
       - uses: actions/setup-java@v5
