--- a/.github/workflows/hone.yml
+++ b/.github/workflows/hone.yml
@@ -21,7 +21,7 @@ jobs:
     #  this issue: https://github.com/objectionary/hone-maven-plugin/issues/297. Also, the plugin run
     #  is time-consuming, we should enable it only after the plugin will have stable execution time,
     #  in order to not disturb the development in this repository.
-    if: env.RUN_WORKFLOW == 'true'
+    if: ${{ env.RUN_WORKFLOW == 'true' }}
     steps:
       - uses: actions/checkout@v5
       - uses: actions/setup-java@v5
