--- a/.github/workflows/jmh.yml
+++ b/.github/workflows/jmh.yml
@@ -13,7 +13,7 @@ jobs:
   jmh:
     timeout-minutes: 45
     runs-on: ubuntu-24.04
-    if: env.RUN_WORKFLOW == 'true'
+    if: ${{ env.RUN_WORKFLOW == 'true' }}
     steps:
       - name: Run JMH Benchmark Action
         uses: volodya-lombrozo/jmh-benchmark-action@v1
