--- a/.github/workflows/mvn.yml
+++ b/.github/workflows/mvn.yml
@@ -16,7 +16,12 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-24.04, windows-2022, macos-15]
-        java: [11, 21]
+        java: [ 17, 23 ]
+        exclude:
+          - os: windows-2022
+            java: 17
+          - os: macos-15
+            java: 17
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v5
