--- a/.github/workflows/mvn.yml
+++ b/.github/workflows/mvn.yml
@@ -34,5 +34,8 @@ jobs:
           path: ~/.m2/repository
           key: ${{ runner.os }}-jdk-${{ matrix.java }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-jdk-${{ matrix.java }}-maven-
+      - uses: JesseTG/rm@v1.0.3
+        with:
+          path: ~/.m2/repository/org/eolang
       - run: mvn clean install -PskipITs --errors --batch-mode
       - run: mvn test --errors --batch-mode
