bug(#632): `wrong-test-order` lint (#784)
* bug(#632): add wrong-test-order lint to enforce proper test placement in EO code

* bug(#632): motive

* bug(#632): disable depends on RUN_WORKFLOW

* bug(#632): disable depends on RUN_WORKFLOW

* ci: update java versions in maven workflow matrix and add exclusions

* ci: remove extra spaces in java version matrix for consistency

* ci: replace env with vars in workflow conditionals to use repository variables

* empty commit to restart pipelines

* ci: add cleanup step to remove eolang dependencies before maven build

* ci: increase deep workflow timeout from 20 to 30 minutes

* empty commit to restart pipelines

--- a/.github/workflows/jmh.yml
+++ b/.github/workflows/jmh.yml
@@ -7,11 +7,13 @@ name: jmh
   pull_request:
     branches:
       - master
+env:
+  RUN_WORKFLOW: false
 jobs:
   jmh:
     timeout-minutes: 45
     runs-on: ubuntu-24.04
-    if: false
+    if: ${{ vars.RUN_WORKFLOW == 'true' }}
     steps:
       - name: Run JMH Benchmark Action
         uses: volodya-lombrozo/jmh-benchmark-action@v1
