--- a/pom.xml
+++ b/pom.xml
@@ -767,6 +767,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <!-- version from the parent pom -->
         <configuration>
+          <argLine>-Djdk.xml.totalEntitySizeLimit=0</argLine>
           <skipTests>${skipUTs}</skipTests>
           <excludedGroups>benchmark,deep,reserved</excludedGroups>
           <excludes>
