--- a/pom.xml
+++ b/pom.xml
@@ -769,7 +769,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <!-- version from the parent pom -->
         <configuration>
-          <argLine>${argLine} -Djdk.xml.totalEntitySizeLimit=0</argLine>
+          <argLine>@{argLine} -Djdk.xml.totalEntitySizeLimit=0</argLine>
           <skipTests>${skipUTs}</skipTests>
           <excludedGroups>benchmark,deep,reserved</excludedGroups>
           <excludes>
@@ -837,6 +837,8 @@
         <!-- version from the parent pom -->
         <executions>
           <execution>
+            <id>unpack-hadoop-fsnamesystem</id>
+            <phase>process-classes</phase>
             <goals>
               <goal>unpack</goal>
             </goals>
